--- a/client/package.json
+++ b/client/package.json
@@ -1,18 +1,20 @@
 {
   "name": "home2hospital",
   "version": "0.1.0",
+  "proxy":"http://localhost:8000/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^5.0.0",
     "isemail": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
